--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ scala/ensime.sbt
 .DS_Store
 
 # pip sometimes makes a src dir for some reason
-src/*
+model/src/*
 
 # ignore Sublime project files
 *sublime-project
@@ -82,3 +82,27 @@ stubs/
 
 # ignore data folder
 model/data/*.csv
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
