Add skeleton for TF on front end

--- a/model/dev.yml
+++ b/model/dev.yml
@@ -16,3 +16,7 @@ commands:
   nb:
     desc: "Run jupyter notebooks"
     run: jupyter notebook
+  tfjs:
+    desc: "Convert to tfsj"
+    run: tensorflowjs_converter --input_format keras ./models/$@.h5 ../public/model/ && cp ./models/$@.json ../src/assets/dictionary.json
+
