--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "local-build": "rm -rf build && ./node_modules/yarn/bin/yarn run build && serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
