--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "private": true,
   "homepage": "https://cosmos.garden",
   "dependencies": {
-    "@tensorflow/tfjs": "^1.7.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "gh-pages": "^3.0.0",
-    "google-auth-library": "^6.0.1",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "workerize-loader": "^1.2.1"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
